--- a/Frontend/ElectronViteGUI/src/renderer/src/assets/main.css
+++ b/Frontend/ElectronViteGUI/src/renderer/src/assets/main.css
@@ -3187,5 +3187,5 @@ html.responsive.touch .market_listing_row:hover .market_actionmenu_button {
 }
 
 .appbar-custom {
-  background-color: #1b1b1b;
+  /* background-color: #1b1b1b; */
 }
